[gd_scene load_steps=7 format=2]

[ext_resource path="res://Art/Card_Base.png" type="Texture" id=1]
[ext_resource path="res://Theme/Theme.tres" type="Theme" id=2]
[ext_resource path="res://Card.gd" type="Script" id=3]
[ext_resource path="res://Theme/font_18.tres" type="DynamicFont" id=4]
[ext_resource path="res://Theme/font_22.tres" type="DynamicFont" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 104, 154 )

[node name="Card" type="Area2D"]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.486275, 0.631373, 0.752941, 1 )
texture = ExtResource( 1 )

[node name="Title" type="Label" parent="."]
margin_left = -34.0
margin_top = -139.0
margin_right = 35.0
margin_bottom = -104.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 5 )
text = "Title"

[node name="Text" type="Label" parent="."]
margin_left = -88.0
margin_top = 64.0
margin_right = 96.0
margin_bottom = 144.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 4 )
text = "This is an example of the text"
autowrap = true

[node name="Worker" type="Label" parent="."]
margin_left = -56.0
margin_top = -96.0
margin_right = 56.0
margin_bottom = 64.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 4 )
text = "Worker"
align = 1
valign = 1

[node name="WorkerZone" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.196078 )
margin_left = -56.0
margin_top = -96.0
margin_right = 56.0
margin_bottom = 65.0
mouse_filter = 2
theme = ExtResource( 2 )

[node name="WorkerSlot" type="Node2D" parent="."]
position = Vector2( 0, -16 )
z_index = 1

[connection signal="input_event" from="." to="." method="_on_Card_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Card_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Card_mouse_exited"]
